--- a/src/index.html
+++ b/src/index.html
@@ -8,71 +8,222 @@
   </head>
   <body>
     <main class="main">
+      <!-- Nav bar -->
       <header>
-        <nav class="navbar navbar-expand-lg bg-light">
-          <div class="container-fluid">
-            <a class="navbar-brand" href="#">Navbar</a>
+        <nav class="navbar navbar-expand-lg p-3 fs-5">
+          <div class="container-fluid border-bottom pb-4">
+            <a class="navbar-brand" href="#">
+              <img src="./images/logo.svg" alt="Logo-Sneakers" />
+            </a>
             <button
               class="navbar-toggler"
               type="button"
               data-bs-toggle="collapse"
-              data-bs-target="#navbarSupportedContent"
-              aria-controls="navbarSupportedContent"
+              data-bs-target="#navbarNav"
+              aria-controls="navbarNav"
               aria-expanded="false"
               aria-label="Toggle navigation"
             >
               <span class="navbar-toggler-icon"></span>
             </button>
-            <div class="collapse navbar-collapse" id="navbarSupportedContent">
-              <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+            <div
+              class="collapse navbar-collapse justify-content-between"
+              id="navbarNav"
+            >
+              <ul
+                class="navbar-nav justify-content-around align-items-center gap-4"
+              >
                 <li class="nav-item">
                   <a class="nav-link active" aria-current="page" href="#"
-                    >Home</a
+                    >Collections</a
                   >
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="#">Link</a>
-                </li>
-                <li class="nav-item dropdown">
-                  <a
-                    class="nav-link dropdown-toggle"
-                    href="#"
-                    role="button"
-                    data-bs-toggle="dropdown"
-                    aria-expanded="false"
+                  <a class="nav-link active" aria-current="page" href="#"
+                    >Men</a
                   >
-                    Dropdown
-                  </a>
-                  <ul class="dropdown-menu">
-                    <li><a class="dropdown-item" href="#">Action</a></li>
-                    <li>
-                      <a class="dropdown-item" href="#">Another action</a>
-                    </li>
-                    <li><hr class="dropdown-divider" /></li>
-                    <li>
-                      <a class="dropdown-item" href="#">Something else here</a>
-                    </li>
-                  </ul>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link disabled">Disabled</a>
+                  <a class="nav-link active" aria-current="page" href="#"
+                    >Women</a
+                  >
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link active" aria-current="page" href="#"
+                    >About</a
+                  >
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link active" aria-current="page" href="#"
+                    >Contact</a
+                  >
                 </li>
               </ul>
-              <form class="d-flex" role="search">
-                <input
-                  class="form-control me-2"
-                  type="search"
-                  placeholder="Search"
-                  aria-label="Search"
-                />
-                <button class="btn btn-outline-success" type="submit">
-                  Search
-                </button>
-              </form>
+              <ul
+                class="navbar-nav justify-content-around align-items-center gap-4"
+              >
+                <li class="nav-item">
+                  <a class="nav-link active" aria-current="page" href="#"
+                    ><img src="./images/icon-cart.svg" alt="Cart" width="30"
+                  /></a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link active" aria-current="page" href="#"
+                    ><img
+                      src="./images/image-avatar.png"
+                      alt="Avatar"
+                      width="60"
+                  /></a>
+                </li>
+              </ul>
             </div>
           </div>
         </nav>
       </header>
+      <!-- Card product -->
+      <div class="container">
+        <div class="card m-auto my-3" style="max-width: 90vw">
+          <div class="row g-0">
+            <div class="col-md-4">
+              <div
+                id="carouselExampleIndicators"
+                class="carousel slide"
+                data-bs-ride="true"
+              >
+                <div class="carousel-indicators">
+                  <button
+                    type="button"
+                    data-bs-target="#carouselExampleIndicators"
+                    data-bs-slide-to="0"
+                    class="active"
+                    aria-current="true"
+                    aria-label="Slide 1"
+                  ></button>
+                  <button
+                    type="button"
+                    data-bs-target="#carouselExampleIndicators"
+                    data-bs-slide-to="1"
+                    aria-label="Slide 2"
+                  ></button>
+                  <button
+                    type="button"
+                    data-bs-target="#carouselExampleIndicators"
+                    data-bs-slide-to="2"
+                    aria-label="Slide 3"
+                  ></button>
+                  <button
+                    type="button"
+                    data-bs-target="#carouselExampleIndicators"
+                    data-bs-slide-to="3"
+                    aria-label="Slide 4"
+                  ></button>
+                </div>
+                <div class="carousel-inner">
+                  <div class="carousel-item active">
+                    <img
+                      src="./images/image-product-1.jpg"
+                      class="d-block w-100"
+                      alt="..."
+                    />
+                  </div>
+                  <div class="carousel-item">
+                    <img
+                      src="./images/image-product-2.jpg"
+                      class="d-block w-100"
+                      alt="..."
+                    />
+                  </div>
+                  <div class="carousel-item">
+                    <img
+                      src="./images/image-product-3.jpg"
+                      class="d-block w-100"
+                      alt="..."
+                    />
+                  </div>
+                  <div class="carousel-item">
+                    <img
+                      src="./images/image-product-4.jpg"
+                      class="d-block w-100"
+                      alt="..."
+                    />
+                  </div>
+                </div>
+                <button
+                  class="carousel-control-prev"
+                  type="button"
+                  data-bs-target="#carouselExampleIndicators"
+                  data-bs-slide="prev"
+                >
+                  <span
+                    class="carousel-control-prev-icon"
+                    aria-hidden="true"
+                  ></span>
+                  <span class="visually-hidden">Previous</span>
+                </button>
+                <button
+                  class="carousel-control-next"
+                  type="button"
+                  data-bs-target="#carouselExampleIndicators"
+                  data-bs-slide="next"
+                >
+                  <span
+                    class="carousel-control-next-icon"
+                    aria-hidden="true"
+                  ></span>
+                  <span class="visually-hidden">Next</span>
+                </button>
+              </div>
+            </div>
+            <div class="col-md-8">
+              <div class="card-body p-5">
+                <p class="card-text text-orange">SNEAKER COMPANY</p>
+                <h5 class="card-title fs-2">Fall Limited Edition Sneakers</h5>
+                <p class="card-text">
+                  Casual: Versátiles, transmiten simplicidad, naturalidad y
+                  comodidad, se utilizan en contextos que no exigen el respeto
+                  de un código de vestimenta
+                </p>
+                <p class="card-text fs-4">Total: $125.00</p>
+                <p class="card-text fs-6">Unidad: $125.00</p>
+                <div class="container d-flex align-items-center">
+                  <div class="input-group w-25 bg-light py-0">
+                    <button
+                      class="btn text-orange fs-5"
+                      type="button"
+                      id="button-addon1"
+                    >
+                      -
+                    </button>
+                    <input
+                      type="number"
+                      class="form-control text-center bg-light"
+                      placeholder=""
+                      aria-label="Example text with button addon"
+                      aria-describedby="button-addon1"
+                      value="0"
+                    />
+                    <button
+                      class="btn text-orange fs-5"
+                      type="button"
+                      id="button-addon1"
+                    >
+                      +
+                    </button>
+                  </div>
+                  <button
+                    type="button"
+                    class="btn btn-dark ms-2 px-5 py-2 btn-orange"
+                    id="btn-add-cart"
+                  >
+                    <img src="./images/icon-cart-copy.svg" alt="" />
+                    Add to cart
+                  </button>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
     </main>
   </body>
 </html>
