--- a/src/index.html
+++ b/src/index.html
@@ -99,10 +99,12 @@
               <h1 class="modal-title fs-5" id="cartModalLabel">Cart</h1>
               <button
                 type="button"
-                class="btn-close"
+                class="btn btn-outline-dark"
                 data-bs-dismiss="modal"
                 aria-label="Close"
-              ></button>
+              >
+                X
+              </button>
             </div>
             <div class="modal-body cart-container">
               <!-- <div class="card mb-3" style="max-width: 540px">
@@ -142,149 +144,7 @@
         </div>
       </div>
       <!-- Card product -->
-      <div class="container card-container">
-        <div class="card m-auto my-3" style="max-width: 90vw">
-          <div class="row g-0">
-            <div class="col-md-4">
-              <div
-                id="carouselExampleIndicators"
-                class="carousel slide"
-                data-bs-ride="true"
-              >
-                <div class="carousel-indicators">
-                  <button
-                    type="button"
-                    data-bs-target="#carouselExampleIndicators"
-                    data-bs-slide-to="0"
-                    class="active"
-                    aria-current="true"
-                    aria-label="Slide 1"
-                  ></button>
-                  <button
-                    type="button"
-                    data-bs-target="#carouselExampleIndicators"
-                    data-bs-slide-to="1"
-                    aria-label="Slide 2"
-                  ></button>
-                  <button
-                    type="button"
-                    data-bs-target="#carouselExampleIndicators"
-                    data-bs-slide-to="2"
-                    aria-label="Slide 3"
-                  ></button>
-                  <button
-                    type="button"
-                    data-bs-target="#carouselExampleIndicators"
-                    data-bs-slide-to="3"
-                    aria-label="Slide 4"
-                  ></button>
-                </div>
-                <div class="carousel-inner">
-                  <div class="carousel-item active">
-                    <img
-                      src="./images/image-product-1.jpg"
-                      class="d-block w-100"
-                      alt="..."
-                    />
-                  </div>
-                  <div class="carousel-item">
-                    <img
-                      src="./images/image-product-2.jpg"
-                      class="d-block w-100"
-                      alt="..."
-                    />
-                  </div>
-                  <div class="carousel-item">
-                    <img
-                      src="./images/image-product-3.jpg"
-                      class="d-block w-100"
-                      alt="..."
-                    />
-                  </div>
-                  <div class="carousel-item">
-                    <img
-                      src="./images/image-product-4.jpg"
-                      class="d-block w-100"
-                      alt="..."
-                    />
-                  </div>
-                </div>
-                <button
-                  class="carousel-control-prev"
-                  type="button"
-                  data-bs-target="#carouselExampleIndicators"
-                  data-bs-slide="prev"
-                >
-                  <span
-                    class="carousel-control-prev-icon"
-                    aria-hidden="true"
-                  ></span>
-                  <span class="visually-hidden">Previous</span>
-                </button>
-                <button
-                  class="carousel-control-next"
-                  type="button"
-                  data-bs-target="#carouselExampleIndicators"
-                  data-bs-slide="next"
-                >
-                  <span
-                    class="carousel-control-next-icon"
-                    aria-hidden="true"
-                  ></span>
-                  <span class="visually-hidden">Next</span>
-                </button>
-              </div>
-            </div>
-            <div class="col-md-8">
-              <div class="card-body p-5">
-                <p class="card-text text-orange">SNEAKER COMPANY</p>
-                <h5 class="card-title fs-2">Fall Limited Edition Sneakers</h5>
-                <p class="card-text">
-                  Casual: Versátiles, transmiten simplicidad, naturalidad y
-                  comodidad, se utilizan en contextos que no exigen el respeto
-                  de un código de vestimenta
-                </p>
-                <p class="card-text fs-4">Total: $125.00</p>
-                <p class="card-text fs-6">Unidad: $125.00</p>
-                <div class="container d-flex align-items-center">
-                  <div class="input-group w-25 bg-light py-0">
-                    <button
-                      class="btn text-orange fs-5"
-                      type="button"
-                      id="button-addon1"
-                    >
-                      -
-                    </button>
-                    <input
-                      type="number"
-                      class="form-control text-center bg-light"
-                      placeholder=""
-                      aria-label="Example text with button addon"
-                      aria-describedby="button-addon1"
-                      value="0"
-                    />
-                    <button
-                      class="btn text-orange fs-5"
-                      type="button"
-                      id="button-addon1"
-                    >
-                      +
-                    </button>
-                  </div>
-                  <button
-                    type="button"
-                    class="btn btn-dark ms-2 px-5 py-2 btn-orange"
-                    id="btn-add-cart"
-                  >
-                    <img src="./images/icon-cart-copy.svg" alt="" />
-                    Add to cart
-                  </button>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
+      <div class="container card-container"></div>
     </main>
   </body>
 </html>
